文件和文件夹删除功能

--- a/src/app/my-components/MyModal/serch-note-modal/serch-note-modal.component.html
+++ b/src/app/my-components/MyModal/serch-note-modal/serch-note-modal.component.html
@@ -41,8 +41,8 @@
                 <ul nz-menu nzSelectable>
                   <li nz-menu-item>复制引用</li>
                   <li nz-menu-item>插入引用</li>
-                  <li nz-menu-item>预览文章</li>
-                  <li nz-menu-item>打开文章</li>
+                  <li nz-menu-item>预览文档</li>
+                  <li nz-menu-item>打开文档</li>
                 </ul>
               </nz-dropdown-menu>
 
