--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -61,7 +61,7 @@
     </button>
   </nz-form-item>
 </form>
-<div class="other" *ngIf="userNameIsOk">
+<div class="other" >
   其他登录方式
   <i nz-tooltip nzTooltipTitle="人脸识别登录" (click)="open('face', 'window')" nz-icon nzType="smile" class="icon"></i>
   <i nz-tooltip nzTooltipTitle="FIDO2登录" (click)="open('fido2', 'window')" nz-icon nzType="usb" class="icon"></i>
