登录审计界面

--- a/src/app/routes/pro/list/login-audit-table-list/table-list.component.html
+++ b/src/app/routes/pro/list/login-audit-table-list/table-list.component.html
@@ -78,7 +78,7 @@
     </button>
     <nz-dropdown-menu #batchMenu="nzDropdownMenu">
       <ul nz-menu>
-        <li nz-menu-item (click)="remove()">删除</li>
+        <li nz-menu-item (click)="remove()">订阅警报</li>
         <li nz-menu-item (click)="approval()">批量审批</li>
       </ul>
     </nz-dropdown-menu>
