显示登录方式

--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -56,7 +56,7 @@
     </nz-col>
   </nz-form-item>
   <nz-form-item>
-    <button nz-button type="submit" nzType="primary" [disabled]="!userNameIsOk" nzSize="large" [nzLoading]="loading" nzBlock>
+    <button nz-button type="submit" nzType="primary"  nzSize="large" [nzLoading]="loading" nzBlock>
       {{ userNameLoginButtonValue }}
     </button>
   </nz-form-item>
