支持飞天诚信epass2001

--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -66,6 +66,6 @@
   <i nz-tooltip nzTooltipTitle="人脸识别登录" (click)="open('face', 'window')" nz-icon nzType="smile" class="icon"></i>
   <i nz-tooltip nzTooltipTitle="FIDO2登录" (click)="open('fido2', 'window')" nz-icon nzType="usb" class="icon"></i>
   <i nz-tooltip nzTooltipTitle="二维码登录" (click)="open('qrcode', 'window')" nz-icon nzType="qrcode" class="icon"></i>
-  <i nz-tooltip nzTooltipTitle="智能密码钥登录" (click)="open('usbkey', 'window')" nz-icon nzType="key" class="icon"></i>
+  <i nz-tooltip nzTooltipTitle="智能密码钥匙登录" (click)="open('usbkey', 'window')" nz-icon nzType="key" class="icon"></i>
   <a class="register" routerLink="/passport/register">注册账户</a>
 </div>
