支持登录安全策略

--- a/src/app/routes/pro/account/settings/security/security.component.html
+++ b/src/app/routes/pro/account/settings/security/security.component.html
@@ -1,10 +1,20 @@
 <nz-list nzItemLayout="horizontal">
+
+  <nz-list-item [nzActions]="[LoginSecurityPolicyLevelOp]">
+    <ng-template #LoginSecurityPolicyLevelOp>
+      <a (click)="OnChangeLoginSecurityPolicyLevel()">修改</a>
+    </ng-template>
+    <nz-list-item-meta nzTitle="登录安全策略" [nzDescription]="LoginSecurityPolicyLevelDesc">
+      <ng-template #LoginSecurityPolicyLevelDesc> 当前登录安全策略：<span class="text-green" >{{levelText}}</span>{{levelDes}}</ng-template>
+    </nz-list-item-meta>
+  </nz-list-item>
+
   <nz-list-item [nzActions]="[passwordOp]">
     <ng-template #passwordOp>
-      <a >修改</a>
+      <a>修改</a>
     </ng-template>
     <nz-list-item-meta nzTitle="账户密码" [nzDescription]="passwordDesc">
-      <ng-template #passwordDesc> 当前密码强度：<span class="text-green">强</span> </ng-template>
+      <ng-template #passwordDesc> 当前密码强度：<span class="text-green">强</span></ng-template>
     </nz-list-item-meta>
   </nz-list-item>
   <nz-list-item [nzActions]="[phoneOp]">
@@ -12,40 +22,40 @@
       <a >修改</a>
     </ng-template>
     <nz-list-item-meta nzTitle="密保手机" [nzDescription]="phoneDesc">
-      <ng-template #phoneDesc> 已绑定手机：159****2231 </ng-template>
+      <ng-template #phoneDesc> 已绑定手机：159****2231</ng-template>
     </nz-list-item-meta>
   </nz-list-item>
   <nz-list-item [nzActions]="[questionOp]">
     <ng-template #questionOp>
-      <a >修改</a>
+      <a>修改</a>
     </ng-template>
     <nz-list-item-meta nzTitle="密保问题" [nzDescription]="questionDesc">
-      <ng-template #questionDesc> 未设置密保问题，密保问题可有效保护账户安全 </ng-template>
+      <ng-template #questionDesc> 未设置密保问题，密保问题可有效保护账户安全</ng-template>
     </nz-list-item-meta>
   </nz-list-item>
   <nz-list-item [nzActions]="[emailOp]">
     <ng-template #emailOp>
-      <a >修改</a>
+      <a>修改</a>
     </ng-template>
     <nz-list-item-meta nzTitle="备用邮箱" [nzDescription]="emailDesc">
-      <ng-template #emailDesc> 已绑定邮箱：cip*****.com </ng-template>
+      <ng-template #emailDesc> 已绑定邮箱：cip*****.com</ng-template>
     </nz-list-item-meta>
   </nz-list-item>
   <nz-list-item [nzActions]="[mfaOp]">
     <ng-template #mfaOp>
-      <a >修改</a>
+      <a>修改</a>
     </ng-template>
     <nz-list-item-meta nzTitle="MFA 设备" [nzDescription]="mfaDesc">
-      <ng-template #mfaDesc> 未绑定 MFA 设备，绑定后，可以进行二次确认 </ng-template>
+      <ng-template #mfaDesc> 未绑定 MFA 设备，绑定后，可以进行二次确认</ng-template>
     </nz-list-item-meta>
   </nz-list-item>
 
   <nz-list-item [nzActions]="[faceOp]">
     <ng-template #faceOp>
-      <a >修改</a>
+      <a>修改</a>
     </ng-template>
     <nz-list-item-meta nzTitle="Face OK" [nzDescription]="faceDesc">
-      <ng-template #faceDesc> 未绑定人脸，绑定人脸后，可以使用人脸登录或二次确认 </ng-template>
+      <ng-template #faceDesc> 未绑定人脸，绑定人脸后，可以使用人脸登录或二次确认</ng-template>
     </nz-list-item-meta>
   </nz-list-item>
 
@@ -57,8 +67,8 @@
       <ng-template #fdio2Desc>
         未绑定 FIDO2 设备，绑定后，可以使用FIDO2设备认证登录,支持: Yubikey、WindowsHello、支持FIDO2协议的安全令牌<br>
         <ul>
-          <li  *ngFor="let key_id of fido2list.keys(),index as i" >
-              {{fido2list.get(key_id)}}---- <a (click)="unBindFIDO2(key_id)">解绑</a>
+          <li *ngFor="let key_id of fido2list.keys(),index as i">
+            {{fido2list.get(key_id)}}---- <a (click)="unBindFIDO2(key_id)">解绑</a>
           </li>
         </ul>
       </ng-template>
@@ -83,10 +93,9 @@
       <a (click)="OnBindUsbKey()">绑定</a>
     </ng-template>
     <nz-list-item-meta nzTitle="智能密码钥匙" [nzDescription]="usbkeyDesc">
-      <ng-template #usbkeyDesc> 未绑定 智能密码钥匙，绑定后，可以使用 智能密码钥匙 登录和抗抵赖签名 </ng-template>
+      <ng-template #usbkeyDesc> 未绑定 智能密码钥匙，绑定后，可以使用 智能密码钥匙 登录和抗抵赖签名</ng-template>
     </nz-list-item-meta>
   </nz-list-item>
-
 
 
 </nz-list>
@@ -98,4 +107,5 @@
   (nzOnOk)="handleOk()"
   [nzOkLoading]="isOkLoading"
 >
-  <input *nzModalContent nz-input placeholder="{{placeholder}}" [(ngModel)]="value"  />
+  <app-select-moal  #app_select_moal></app-select-moal>
+  <input *nzModalContent nz-input placeholder="{{placeholder}}" [(ngModel)]="value"/>
