--- a/src/app/routes/pro/account/settings/base/base.component.html
+++ b/src/app/routes/pro/account/settings/base/base.component.html
@@ -3,7 +3,7 @@
     <div class="left">
       <form nz-form nzLayout="vertical" #f="ngForm" (submit)="save()" se-container="1">
         <se label="邮箱" error="请输入您的邮箱!">
-          <input nz-input type="email" [(ngModel)]="user.email" name="email" required />
+          <input nz-input type="email" [(ngModel)]="user.email" name="email" required  readonly/>
         </se>
         <se label="昵称" error="请输入您的昵称!">
           <input nz-input [(ngModel)]="user.name" name="name" required />
@@ -18,7 +18,7 @@
           ></textarea>
         </se>
         <se label="国家/地区">
-          <nz-select [(ngModel)]="user.country" name="country" required>
+          <nz-select [(ngModel)]="user.country" name="country" >
             <nz-option nzLabel="中国" nzValue="China"></nz-option>
           </nz-select>
         </se>
@@ -28,7 +28,6 @@
               [(ngModel)]="user.geographic.province.key"
               (ngModelChange)="choProvince($event)"
               name="geographic.province.key"
-              required
               class="width-50 mr-sm"
             >
               <nz-option *ngFor="let p of provinces" [nzLabel]="p.name" [nzValue]="p.id"></nz-option>
@@ -39,10 +38,10 @@
           </div>
         </se>
         <se label="街道地址" error="请输入您的街道地址!">
-          <input nz-input [(ngModel)]="user.address" name="address" required />
+          <input nz-input [(ngModel)]="user.address" name="address"  />
         </se>
         <se label="联系电话" error="请输入您的联系电话!">
-          <input nz-input [(ngModel)]="user.phone" name="phone" required />
+          <input nz-input [(ngModel)]="user.phone" name="phone"  />
         </se>
         <se>
           <button nz-button nzType="primary" [disabled]="f.invalid">更新基本信息</button>
