--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -13,7 +13,7 @@
     <global-footer [links]="links">
       Copyright
       <i nz-icon nzType="copyright"></i> 2021 <a href="//github.com/cipchk" target="_blank">卡色</a>出品<br>
-      <a target="_blank" href="http://www.beian.miit.gov.cn/" style="color:#bdbdbd"> <img src="/assets/icp.png" />鲁ICP备19063639号-1</a><br>
+      <a target="_blank" href="https://beian.miit.gov.cn" style="color:#bdbdbd"> <img src="/assets/icp.png" />鲁ICP备19063639号-1</a><br>
       <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37010202001926" style="color:#bdbdbd"><img src="/assets/beian.png" />鲁公网安备 37010202001926号</a><br />
       <a target="_blank" href="https://github.com/hyfree/MoreNote" style="color:#bdbdbd;"><img src="/assets/images/github/github.svg" style="width:20px">自信的使用.net构建</a><br>
       <a target="_blank" href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" style="color:#bdbdbd">本网站由<img style="height:30px" src="/assets/images/upyun_logs/upyun_logo5.png">提供CDN加速/云存储服务</a><br>
