计划增加VuePress支持

--- a/src/app/routes/note/editor/editor.component.html
+++ b/src/app/routes/note/editor/editor.component.html
@@ -107,9 +107,12 @@
                   <li nz-menu-item>仓库设置</li>
                   <li nz-menu-item>仓库附件</li>
                   <li nz-menu-item>仓库成员</li>
+                  <li nz-menu-item (click)="pushToBlog()">发布博客</li>
                   <li nz-menu-item>WebHook</li>
                 </ul>
               </li>
+
+
               <li nz-submenu nzTitle="回收" nzIcon="delete">
                 <ul>
                   <li nz-menu-item>笔记回收站</li>
