--- a/src/app/routes/pro/account/settings/security/security.component.html
+++ b/src/app/routes/pro/account/settings/security/security.component.html
@@ -106,7 +106,7 @@
   (nzOnCancel)="handleCancel()"
   (nzOnOk)="handleOk()"
   [nzOkLoading]="isOkLoading"
->
+></nz-modal>
   <app-select-moal  #app_select_moal></app-select-moal>
   <app-change-pass-word-modal-component #app_change_user_passwd></app-change-pass-word-modal-component>
   <input *nzModalContent nz-input placeholder="{{placeholder}}" [(ngModel)]="value"/>
