--- a/src/app/routes/pro/list/table-list/table-list.component.html
+++ b/src/app/routes/pro/list/table-list/table-list.component.html
@@ -102,7 +102,7 @@
   <nz-form-item>
     <nz-form-label nzFor="no">描述</nz-form-label>
     <nz-form-control>
-      <input nz-input [(ngModel)]="description" name="description" placeholder="请输入" id="no" />
+      <input nz-input [(ngModel)]="description" name="description" placeholder="请输入"  id="description" />
     </nz-form-control>
   </nz-form-item>
 </ng-template>
