--- a/src/app/routes/file-manager/file-browser/file-browser.component.html
+++ b/src/app/routes/file-manager/file-browser/file-browser.component.html
@@ -1,10 +1,10 @@
-<div class="ant-card " style="">
+<div class="ant-card" style="">
   <div nz-row nzFlex="auto" style="flex-wrap: nowrap">
     <div nz-col nzFlex="300px">
       <nz-tabset nzType="card">
-        <nz-tab nzTitle='仓库'>
+        <nz-tab nzTitle="仓库">
           <nz-input-group [nzSuffix]="suffixIcon" style="margin-bottom: 1rem">
-            <input type="text" nz-input placeholder="搜索笔记" [(ngModel)]="searchValue"/>
+            <input type="text" nz-input placeholder="搜索笔记" [(ngModel)]="searchValue" />
           </nz-input-group>
           <ng-template #suffixIcon>
             <i nz-icon nzType="search"></i>
@@ -26,7 +26,7 @@
             (nzExpandChange)="nzEvent($event)"
           ></nz-tree>
           <nz-dropdown-menu #menu="nzDropdownMenu" #action="nzDropdownMenu">
-            <ul nz-menu style="min-width:8rem">
+            <ul nz-menu style="min-width: 8rem">
               <li nz-menu-item>复制</li>
               <li nz-menu-item>剪切</li>
               <li nz-menu-item (click)="OnReName()">重命名</li>
@@ -49,8 +49,8 @@
               </li>
               <li nz-submenu nzTitle="新建">
                 <ul>
-                  <li nz-menu-item (click)="onCreateNotebook($event,false)">文件夹</li>
-                  <li nz-menu-item (click)="onCreateNotebook($event,true)">根文件夹</li>
+                  <li nz-menu-item (click)="onCreateNotebook($event, false)">文件夹</li>
+                  <li nz-menu-item (click)="onCreateNotebook($event, true)">根文件夹</li>
                   <li nz-menu-item (click)="onCreateMdDoc()">markdown文档</li>
                   <li nz-menu-item (click)="onCreateHtmlDoc()">富文本文档</li>
                 </ul>
@@ -93,9 +93,9 @@
             </ul>
           </nz-dropdown-menu>
         </nz-tab>
-        <nz-tab nzTitle='工具'>
-          <div style="height:50rem">
-            <ul nz-menu nzMode="inline" nzTheme='light' style="margin-bottom: 1rem">
+        <nz-tab nzTitle="工具">
+          <div style="height: 50rem">
+            <ul nz-menu nzMode="inline" nzTheme="light" style="margin-bottom: 1rem">
               <li nz-submenu nzTitle="搜索" nzIcon="search">
                 <ul>
                   <li nz-menu-item>搜索笔记</li>
@@ -112,7 +112,6 @@
                 </ul>
               </li>
 
-
               <li nz-submenu nzTitle="回收" nzIcon="delete">
                 <ul>
                   <li nz-menu-item>笔记回收站</li>
@@ -126,13 +125,11 @@
                 </ul>
               </li>
             </ul>
-
           </div>
-
         </nz-tab>
       </nz-tabset>
     </div>
-    <div nz-col nzFlex="auto" >
+    <div nz-col nzFlex="auto">
       <div nz-row nzFlex="200px" style="height: 40px">
         <nz-breadcrumb>
           <nz-breadcrumb-item>
@@ -148,7 +145,7 @@
           <nz-breadcrumb-item>Application</nz-breadcrumb-item>
         </nz-breadcrumb>
       </div>
-      <div nz-row nzFlex="auto" style="background-color: #0e76ac;text-align: center;vertical-align: center">
+      <div nz-row nzFlex="auto" style="background-color: #0e76ac; text-align: center; vertical-align: center">
         <nz-table
           #virtualTable
           nzShowSizeChanger
@@ -159,38 +156,37 @@
           [nzFrontPagination]="false"
           [nzShowPagination]="false"
           [nzPageSize]="10"
-          [nzScroll]="{  x: '800px',y:'800px' }"
+          [nzScroll]="{ x: '800px', y: '800px' }"
           [nzData]="listOfData"
-
-          style="width: 100%">
+          style="width: 100%"
+        >
           <thead>
-
-          <tr>
-            <th nzWidth="100px"  [nzChecked]="false"    ></th>
-            <th nzWidth="600px"  nzLeft>Name</th>
-            <th nzWidth="200px"> Modify date</th>
-            <th nzWidth="100px">Size</th>
-            <th nzWidth="200px" nzRight>Action</th>
-          </tr>
+            <tr>
+              <th nzWidth="100px" [nzChecked]="false"></th>
+              <th nzWidth="400px" nzLeft>Name</th>
+              <th nzWidth="200px"> Modify date</th>
+              <th nzWidth="100px">Size</th>
+              <th nzWidth="200px" nzRight>Action</th>
+            </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let data of virtualTable.data" (click)="clickTableTr(data)" (dblclick)="dbClick(data)" >
-            <td [nzChecked]="false"></td>
-            <td nzLeft style="cursor: pointer;user-select: none"   (contextmenu)="contextMenu2($event, menu)">{{ data.Name }}</td>
-            <td>{{data.ModifyDate | date:'yyyy-MM-dd HH:mm:ss'  }}</td>
-            <td>{{ data.Size }}GB</td>
-            <td nzRight>
-              <a>Action</a>
-              <nz-divider nzType="vertical"></nz-divider>
-              <a>Delete</a>
-            </td>
-          </tr>
+            <tr *ngFor="let data of virtualTable.data" (click)="clickTableTr(data)" (dblclick)="dbClick(data)">
+              <td [nzChecked]="false"></td>
+              <td nzLeft style="cursor: pointer; user-select: none" (contextmenu)="contextMenu2($event, menu)">{{ data.Name }}</td>
+              <td>{{ data.ModifyDate | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
+              <td>{{ data.Size }}GB</td>
+              <td nzRight>
+                <a>Action</a>
+                <nz-divider nzType="vertical"></nz-divider>
+                <a>Delete</a>
+              </td>
+            </tr>
           </tbody>
         </nz-table>
       </div>
     </div>
     <div nz-col nzFlex="300px" style="">
-      <div nz-row nzFlex="300px" nzAlign="middle" nzJustify="center" style="height: 300px" >
+      <div nz-row nzFlex="300px" nzAlign="middle" nzJustify="center" style="height: 300px">
         <img
           nz-image
           width="200px"
@@ -199,27 +195,24 @@
           alt=""
         />
       </div>
-      <div nz-row nzFlex="300px" nzAlign="top"   nzJustify="center" style="height: 300px;flex-wrap: nowrap" >
-        <div style="vertical-align: center;text-align: center" >
-          <p nz-typography nzCopyable nzCopyText="Hello, Ant Design!">{{selectFile?.Name}}</p>
-          <p nz-typography nzCopyable nzCopyText="Hello, Ant Design!">{{selectFile?.ModifyDate| date:'yyyy-MM-dd HH:mm:ss' }}</p>
-          <p nz-typography nzCopyable nzCopyText="Hello, Ant Design!">{{selectFile?.Size}}GB</p>
-          <a (click)="sayHello()">Download</a><br>
-          <a (click)="sayHello()" >Play Video</a><br>
-          <a (click)="sayHello()" >Preview images</a><br>
-          <a (click)="sayHello()">Share Link</a><br>
+      <div nz-row nzFlex="300px" nzAlign="top" nzJustify="center" style="height: 300px; flex-wrap: nowrap">
+        <div style="vertical-align: center; text-align: center">
+          <p nz-typography nzCopyable nzCopyText="Hello, Ant Design!">{{ selectFile?.Name }}</p>
+          <p nz-typography nzCopyable nzCopyText="Hello, Ant Design!">{{ selectFile?.ModifyDate | date: 'yyyy-MM-dd HH:mm:ss' }}</p>
+          <p nz-typography nzCopyable nzCopyText="Hello, Ant Design!">{{ selectFile?.Size }}GB</p>
+          <a (click)="sayHello()">Download</a><br />
+          <a (click)="sayHello()">Play Video</a><br />
+          <a (click)="sayHello()">Preview images</a><br />
+          <a (click)="sayHello()">Share Link</a><br />
           <a (click)="sayHello()">Push to Mobile</a>
         </div>
-
       </div>
-      <div nz-row nzFlex="auto"  nzAlign="middle" nzJustify="center">
-        <div   style="vert-align: middle">
+      <div nz-row nzFlex="auto" nzAlign="middle" nzJustify="center">
+        <div style="vert-align: middle">
           <qr [value]="qrValue"></qr>
           <p style="text-align: center">在手机上继续浏览</p>
         </div>
-
       </div>
-
     </div>
   </div>
 </div>
