--- a/src/app/my-components/Editor/simple-mind-map/simple-mind-map/simple-mind-map.component.css
+++ b/src/app/my-components/Editor/simple-mind-map/simple-mind-map/simple-mind-map.component.css
@@ -1,4 +1,12 @@
-#mindMapContainer * {
-  margin: 0;
-  padding: 0;
+#mindMapContainer  {
+  position: absolute;
+  top: 32px;
+  right: 0;
+  bottom: 0;
+  left: 5px;
+  z-index: 0;
+  width: 80em;
+  height: 50em;
+  border: #0c6694 solid 1px;
+
 }
