--- a/src/app/routes/lock/lock.component.html
+++ b/src/app/routes/lock/lock.component.html
@@ -1,7 +1,7 @@
 <div class="ant-card width-lg" style="margin: 0 auto">
   <div class="ant-card-body">
     <div class="avatar">
-      <nz-avatar [nzSrc]="user.avatar" nzIcon="user" nzSize="large"></nz-avatar>
+      <nz-avatar [nzSrc]="user.avatar" nzIcon="user" nzSize="large" />
     </div>
     <form nz-form [formGroup]="f" (ngSubmit)="submit()" role="form" class="mt-md">
       <nz-form-item>
@@ -11,11 +11,11 @@
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
-      <nz-row nzType="flex" nzAlign="middle">
-        <nz-col [nzOffset]="12" [nzSpan]="12" style="text-align: right">
+      <div nz-row nzType="flex" nzAlign="middle">
+        <div nz-col [nzOffset]="12" [nzSpan]="12" style="text-align: right">
           <button nz-button [disabled]="!f.valid" nzType="primary">{{ 'app.lock' | i18n }}</button>
-        </nz-col>
-      </nz-row>
+        </div>
+      </div>
     </form>
   </div>
 </div>
