--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -1,7 +1,9 @@
 <form nz-form [formGroup]="form" (ngSubmit)="submit()" role="form">
   <nz-tabset [nzAnimated]="false" class="tabs" (nzSelectChange)="switch($event)">
     <nz-tab [nzTitle]="'账户密码登录'">
-      <nz-alert *ngIf="error" [nzType]="'error'" [nzMessage]="error" [nzShowIcon]="true" class="mb-lg"></nz-alert>
+      @if (error) {
+        <nz-alert [nzType]="'error'" [nzMessage]="error" [nzShowIcon]="true" class="mb-lg" />
+      }
       <nz-form-item>
         <nz-form-control nzErrorTip="Please enter mobile username">
           <nz-input-group nzSize="large" nzPrefixIcon="user">
@@ -25,8 +27,12 @@
             <input nz-input formControlName="mobile" placeholder="mobile number" />
           </nz-input-group>
           <ng-template #mobileErrorTip let-i>
-            <ng-container *ngIf="i.errors.required"> 请输入手机号！ </ng-container>
-            <ng-container *ngIf="i.errors.pattern"> 手机号格式错误！ </ng-container>
+            @if (i.errors.required) {
+              {{ 'validation.phone-number.required' | i18n }}
+            }
+            @if (i.errors.pattern) {
+              {{ 'validation.phone-number.wrong-format' | i18n }}
+            }
           </ng-template>
         </nz-form-control>
       </nz-form-item>
