--- a/src/app/routes/pro/list/card-list/card-list.component.html
+++ b/src/app/routes/pro/list/card-list/card-list.component.html
@@ -14,10 +14,16 @@
 <nz-list [nzLoading]="loading" [nzDataSource]="list" [nzRenderItem]="item" [nzGrid]="{ gutter: 24, lg: 8, md: 12, sm: 24, xs: 24 }">
   <ng-template #item let-item>
     <nz-list-item>
-      <button *ngIf="item === null" nz-button (click)="show('add')" nzType="dashed" style="width: 100%; height: 193px">
-        <i nz-icon nzType="plus"></i>
-        <span>新增产品</span>
-      </button>
+      @if(item===null){
+        <button  nz-button
+                (click)="show('add')"
+                nzType="dashed"
+                style="width: 100%; height: 193px">
+          <i nz-icon nzType="plus"></i>
+          <span>新增产品</span>
+        </button>
+      }
+
       <nz-card nzHoverable *ngIf="item != null" [nzActions]="[op1, op2]">
         <ng-template #op1>
           <a (click)="show('操作一：' + item.id)">操作一</a>
@@ -27,7 +33,7 @@
         </ng-template>
         <nz-card-meta [nzAvatar]="nzAvatar" [nzTitle]="nzTitle" [nzDescription]="nzDescription">
           <ng-template #nzAvatar>
-            <nz-avatar nzSize="large" [nzSrc]="item.avatar"></nz-avatar>
+            <nz-avatar nzSize="large" [nzSrc]="item.avatar" />
           </ng-template>
           <ng-template #nzTitle>
             <a (click)="show('标题：' + item.id)">{{ item.title }}</a>
