--- a/src/app/routes/note/editor/editor.component.html
+++ b/src/app/routes/note/editor/editor.component.html
@@ -61,8 +61,8 @@
               </li>
               <li nz-submenu nzTitle="新建">
                 <ul>
-                  <li nz-menu-item (click)="onCreateNotebook($event, false)">文件夹</li>
-                  <li nz-menu-item (click)="onCreateNotebook($event, true)">根文件夹</li>
+                  <li nz-menu-item (click)="onCreateNoteCollection($event, false)">文件夹</li>
+                  <li nz-menu-item (click)="onCreateNoteCollection($event, true)">根文件夹</li>
                   <li nz-menu-item (click)="onCreateMdDoc()">markdown文档</li>
                   <li nz-menu-item (click)="onCreateMdDoc()">SimpleMind思维导图</li>
                   <li nz-menu-item (click)="onCreateHtmlDoc()">富文本文档</li>
