--- a/src/app/routes/pro/account/settings/security/security.component.html
+++ b/src/app/routes/pro/account/settings/security/security.component.html
@@ -96,7 +96,7 @@
       <ng-template #usbkeyDesc>  智能密码钥匙绑定后，可以使用 智能密码钥匙 登录和抗抵赖签名
         <ul>
           <li *ngFor="let key_id of usbKeylist.keys(),index as i">
-            {{key_id}}---- <a (click)="unBindUsbKey(key_id)">解绑</a>
+            {{key_id}}--{{usbKeylist.get(key_id)}} <a (click)="unBindUsbKey(key_id)">解绑</a>
           </li>
         </ul>
       </ng-template>
